--- a/UT-04/actv1.html
+++ b/UT-04/actv1.html
@@ -7,6 +7,6 @@
     <title>actv1</title>
 </head>
 <body>
-    <script type="text/javascript" src="actv22.js"></script>
+    <script type="text/javascript" src="actv23map.js"></script>
 </body>
 </html>
