--- a/UT-05/actv5.html
+++ b/UT-05/actv5.html
@@ -22,9 +22,9 @@
                         <input type="text" id="nombre" name="nombre" value="" placeholder="escribe tu nombre" required>
                     </li>
                     <li>
-                        <label for="email">Introduce tu email</label>
+                        <label for="email">Introduce tu email:</label>
                         <input type="email" id="email" name="email" value="" placeholder="escribe tu email" required>
-                    </li>
+                    </li><br>
                     <li>
                         <label for="message">Introduce el mensaje que desees:</label>
                         <textarea name="mensaje" onkeyup="countChars(this);" placeholder="Escribe un texto"></textarea>
