--- a/UT-07/selectores/ejercicio11.html
+++ b/UT-07/selectores/ejercicio11.html
@@ -24,17 +24,18 @@ pero con el valor “Show me” en lugar de “Hide me”.
 </head>
 <body>
     <div class="div1">
-        <h2>This is a heading in a div element</h2>
+      <button>show</button>
+        <p>This is a heading in a div element</p>
         <p>This is some text in a div element.</p>
-        <button>OCULTAR</button>
+        
       </div>
 
       <br><br>
 
       <div class="div2">
-        <h2>This is a heading in a div element</h2>
+        <button>show</button>
+        <p>This is a heading in a div element</p>
         <p>This is some text in a div element.</p>
-        <button>OCULTAR</button>
       </div>
 </body>
 </html>
