--- a/UT-07/selectores/ejercicio13.html
+++ b/UT-07/selectores/ejercicio13.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio9</title>
+    <title>Ejercicio13</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="ejercicio12.js"></script>
+    <script type="text/javascript" src="ejercicio13.js"></script>
     
 
     <style>
         div {
-          display:none;background-color:red;
+          background-color:red;
         }
         </style>
 </head>
